added kristin, euiyoung, and jer

--- a/bid.tex
+++ b/bid.tex
@@ -8,9 +8,9 @@
 
 \begin{document}
 \begin{center}
-\includegraphics{bid.png}
-\section{Berkeley Institute of Design}
-\section{http://bid.berkeley.edu}
+\includegraphics{bid.png}\\
+\Large{Berkeley Institute of Design}\\
+\Large{http://bid.berkeley.edu}\\
 \end{center}
 The Berkeley Institute of Design (BiD) is a research group that fosters a new and deeply interdisciplinary approach to design for the 21st century.  We are an active research group with a focus that spans human-computer interaction (HCI), mechanical design, education, architecture, and art practice.\\
 
@@ -37,8 +37,26 @@ Kimiko Ryokai, School of Information\\
 \emph{kimiko@ischool.berkeley.edu}\\
 \newpage
 \fontsize{3mm}{3.5mm}\selectfont
+\subsection{Turning Sustainability From a Burden into an Innovation Tool}
+\emph{Jeremy Faludi, faludi@berkeley.edu}\\
+\emph{http://www.faludidesign.com}\\
+Sustainability has historically been seen by designers and engineers as a burden--a further constraint on them.  This new design method instead uses sustainability points of view as tools for innovation.  It uses a combination of whole-systems and life-cycle thinking to break down assumptions and lead engineers to reformulate problems for radical reductions in environmental impacts while also improving functionality, business viability, and user experience.
+\subsection{Human-Centric User Research to Identify Disruptive Opportunties in Convergent Paper and Digital Use}
+\emph{Euiyoung Kim, euiyoungkim@berkeley.edu}\\
+\emph{http://euiyoungkim.wordpress.com}\\
+Although digital devices have their own unique features that differentiate them from other
+tangible types of resources for reading, writing and sketching, a majority of people still prefers traditional
+paper media as it provides better user experiences in many aspects: readability, portability, ease of
+making annotations, shared reading, tactile sensory experiences, etc. This research will identify
+barriers and opportunities for paper-like features based on various human-centered design methods and
+explore a new product concept driven by this research. Based on this design research, we propose to
+design conceptual prototypes along with use scenarios. 
 \subsection{Sauron: Embedded Single-Camera Sensing of Printed Physical User Interfaces}
 \emph{Valkyrie Savage, valkyrie@eecs.berkeley.edu}\\
 \emph{http://valkyriesavage.com}\\
 3D printers enable designers to rapidly produce models of future products.  Today these physical prototypes are mostly \emph{passive}.  Our goal is to enable designers to turn models produced on commodity 3D printers into interactive objects with minimal assembly or instrumentation.  We present Sauron, an embedded machine vision-based system for sensing human input on physical controls like buttons, sliders, and joysticks.  Sauron automatically modifies the interior geometry of a designer's object so that, when printed, all components can be sensed by adding a single inward-pointing camera.
+\subsection{MOOC Analytics}
+\emph{Kristin Stephens-Martinez, ksteph@cs.berkeley.edu}\\
+\emph{http://www.cs.berkeley.edu/~ksteph/}
+Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
 \end{document}
