--- a/bid.tex
+++ b/bid.tex
@@ -51,12 +51,23 @@ making annotations, shared reading, tactile sensory experiences, etc. This resea
 barriers and opportunities for paper-like features based on various human-centered design methods and
 explore a new product concept driven by this research. Based on this design research, we propose to
 design conceptual prototypes along with use scenarios. 
+\subsection{Internet-based Collaboration}
+\emph{Mitar Milutinovi\'c, mitar@tnode.net}\\
+\emph{http://mitar.tnode.com}\\
+My research interests are e-democracy, deliberative democracy,
+collective intelligence, trust networks, group decision support systems,
+collaboration tools, peer-to-peer and distributed systems, wireless
+mesh/community networks, organic/self-healing technologies. Currently, I
+am working on a novel platform for enriching the experience of open
+access scholarly literature called PeerLibrary (http://peerlibrary.org/)
+and on a voting scheme which uses a social network between voters to
+find a better overall group decision.
 \subsection{Sauron: Embedded Single-Camera Sensing of Printed Physical User Interfaces}
 \emph{Valkyrie Savage, valkyrie@eecs.berkeley.edu}\\
 \emph{http://valkyriesavage.com}\\
 3D printers enable designers to rapidly produce models of future products.  Today these physical prototypes are mostly \emph{passive}.  Our goal is to enable designers to turn models produced on commodity 3D printers into interactive objects with minimal assembly or instrumentation.  We present Sauron, an embedded machine vision-based system for sensing human input on physical controls like buttons, sliders, and joysticks.  Sauron automatically modifies the interior geometry of a designer's object so that, when printed, all components can be sensed by adding a single inward-pointing camera.
 \subsection{MOOC Analytics}
 \emph{Kristin Stephens-Martinez, ksteph@cs.berkeley.edu}\\
-\emph{http://www.cs.berkeley.edu/~ksteph/}
+\emph{http://www.cs.berkeley.edu/~ksteph/}\\
 Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
 \end{document}
