--- a/bid.tex
+++ b/bid.tex
@@ -37,10 +37,12 @@ Kimiko Ryokai, School of Information\\
 \emph{kimiko@ischool.berkeley.edu}\\
 \newpage
 \fontsize{3mm}{3.5mm}\selectfont
+
 \subsection{Turning Sustainability From a Burden into an Innovation Tool}
 \emph{Jeremy Faludi, faludi@berkeley.edu}\\
 \emph{http://www.faludidesign.com}\\
 Sustainability has historically been seen by designers and engineers as a burden--a further constraint on them.  This new design method instead uses sustainability points of view as tools for innovation.  It uses a combination of whole-systems and life-cycle thinking to break down assumptions and lead engineers to reformulate problems for radical reductions in environmental impacts while also improving functionality, business viability, and user experience.
+
 \subsection{Human-Centric User Research to Identify Disruptive Opportunties in Convergent Paper and Digital Use}
 \emph{Euiyoung Kim, euiyoungkim@berkeley.edu}\\
 \emph{http://euiyoungkim.wordpress.com}\\
@@ -51,6 +53,7 @@ making annotations, shared reading, tactile sensory experiences, etc. This resea
 barriers and opportunities for paper-like features based on various human-centered design methods and
 explore a new product concept driven by this research. Based on this design research, we propose to
 design conceptual prototypes along with use scenarios. 
+
 \subsection{Internet-based Collaboration}
 \emph{Mitar Milutinovi\'c, mitar@tnode.net}\\
 \emph{http://mitar.tnode.com}\\
@@ -62,12 +65,24 @@ am working on a novel platform for enriching the experience of open
 access scholarly literature called PeerLibrary (http://peerlibrary.org/)
 and on a voting scheme which uses a social network between voters to
 find a better overall group decision.
+
+\subsection{Actuated Tensegrity Structures for Dynamic Locomotion}
+\emph{Andrew Sabelhaus, apsabelhaus@berkeley.edu}\\
+\emph{http://tinyurl.com/TensegrityRobots}\\
+Combining the popular mechatronics paradigms of soft robotics and bio-inspiration, actuated Tensegrity structures offer opportunities for unique movement and locomotion methods. Tensegrity robots are comprised of purely tensile and compressive elements (cables and rods) that change shape when their tensions are adjusted. Based on prior work that used machine learning techniques to develop control laws for such actuation, this research seeks to create a physical realization of a Tensegrity robot.
+
 \subsection{Sauron: Embedded Single-Camera Sensing of Printed Physical User Interfaces}
 \emph{Valkyrie Savage, valkyrie@eecs.berkeley.edu}\\
 \emph{http://valkyriesavage.com}\\
 3D printers enable designers to rapidly produce models of future products.  Today these physical prototypes are mostly \emph{passive}.  Our goal is to enable designers to turn models produced on commodity 3D printers into interactive objects with minimal assembly or instrumentation.  We present Sauron, an embedded machine vision-based system for sensing human input on physical controls like buttons, sliders, and joysticks.  Sauron automatically modifies the interior geometry of a designer's object so that, when printed, all components can be sensed by adding a single inward-pointing camera.
+
 \subsection{MOOC Analytics}
 \emph{Kristin Stephens-Martinez, ksteph@cs.berkeley.edu}\\
 \emph{http://www.cs.berkeley.edu/~ksteph/}\\
 Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
+
+\subsection{Ingenuity Lab: Making and Engineering through Design Challenges at a Science Center}
+\emph{Jennifer Wang, jennifer\_wang@berkeley.edu}\\
+\emph{http://best.berkeley.edu/~jen}\\
+My research studies how to increase access and interest in engineering through tinkering spaces at public science centers, in particular at the Ingenuity Lab at the Lawrence Hall of Science. I implement an innovative cross-community design of Ingenuity Lab programs involving engineers, students, and educators and analyze its impact on the learner experience. Through observations, surveys, and interviews, I study learners' engineering-as-"tinkering" experience, persistence in the activities, and potential consequences for long-term interest.
 \end{document}
