added laura, fixed tildes

--- a/bid.tex
+++ b/bid.tex
@@ -38,6 +38,11 @@ Kimiko Ryokai, School of Information\\
 \newpage
 \fontsize{3mm}{3.5mm}\selectfont
 
+\subsection{Fostering Deep Engagements with Technology}
+\emph{Laura Devendorf, ldevendorf@ischool.berkeley.edu}\\
+\emph{http://artfordorks.com}\\
+Working at the intersection of the art and computer science, I design and study technologies for creativity, self expression, reflection, and discovery.
+
 \subsection{Turning Sustainability From a Burden into an Innovation Tool}
 \emph{Jeremy Faludi, faludi@berkeley.edu}\\
 \emph{http://www.faludidesign.com}\\
@@ -78,11 +83,11 @@ Combining the popular mechatronics paradigms of soft robotics and bio-inspiratio
 
 \subsection{MOOC Analytics}
 \emph{Kristin Stephens-Martinez, ksteph@cs.berkeley.edu}\\
-\emph{http://www.cs.berkeley.edu/~ksteph/}\\
+\emph{http://www.cs.berkeley.edu/$\sim$ksteph/}\\
 Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
 
 \subsection{Ingenuity Lab: Making and Engineering through Design Challenges at a Science Center}
 \emph{Jennifer Wang, jennifer\_wang@berkeley.edu}\\
-\emph{http://best.berkeley.edu/~jen}\\
+\emph{http://best.berkeley.edu/$\sim$jen}\\
 My research studies how to increase access and interest in engineering through tinkering spaces at public science centers, in particular at the Ingenuity Lab at the Lawrence Hall of Science. I implement an innovative cross-community design of Ingenuity Lab programs involving engineers, students, and educators and analyze its impact on the learner experience. Through observations, surveys, and interviews, I study learners' engineering-as-"tinkering" experience, persistence in the activities, and potential consequences for long-term interest.
 \end{document}
