anuj, pablo, derrick

--- a/bid.tex
+++ b/bid.tex
@@ -38,6 +38,12 @@ Kimiko Ryokai, School of Information\\
 \newpage
 \fontsize{3mm}{3.5mm}\selectfont
 
+\subsection{DERRICK}
+\emph{Derrick Cheng, derrick@eecs.berkeley.edu}\\
+\emph{http://linkedin.com/chengderrick}\\
+I work with Professor Canny in behavioral data mining. We are currently working on a project in Urban Analytics, in which we are analyzing community feedback on topics related to urban planning and development. 
+In addition to this work, I am also involved in a project called Kinectograph - an automatic body tracking camera for DIY tutorials.
+
 \subsection{Fostering Deep Engagements with Technology}
 \emph{Laura Devendorf, ldevendorf@ischool.berkeley.edu}\\
 \emph{http://artfordorks.com}\\
@@ -59,6 +65,11 @@ barriers and opportunities for paper-like features based on various human-center
 explore a new product concept driven by this research. Based on this design research, we propose to
 design conceptual prototypes along with use scenarios. 
 
+\subsection{Using AI to Extract Information from Charts}
+\emph{Nicholas Kong, nkong@cs.berkeley.edu}\\
+\emph{http://eecs.berkeley.edu/$\sim$nkong}\\
+Visualizations and charts must be carefully designed for their audience, but even the best designed charts are not ideal for every viewer. We apply image and natural language processing techniques to charts to extract information that can help improve the utility of visualizations for users. We have used these techniques for chart redesign and overlays for charts, and are working on associating text with marks (such as bars or lines) in the chart.
+
 \subsection{Internet-based Collaboration}
 \emph{Mitar Milutinovi\'c, mitar@tnode.net}\\
 \emph{http://mitar.tnode.com}\\
@@ -70,6 +81,23 @@ am working on a novel platform for enriching the experience of open
 access scholarly literature called PeerLibrary (http://peerlibrary.org/)
 and on a voting scheme which uses a social network between voters to
 find a better overall group decision.
+
+\subsection{PABLO}
+\emph{Pablo Paredes, paredes@eecs.berkeley.edu}\\
+\emph{http://eecs.berkeley.edu/$\sim$paredes}\\
+My research focuses on Human Potential Realization. HCI has been supporting efforts to help people realize goals that are externally imposed and time bounded through CSCW and Mass Media technology. Recently Persuasive and Behavior Change Technologies have been supporting short term intrinsic goals. However there seems to be a gap in technology development for long-term intrinsic goals, those so-called life goals, such as having a healthy, stress-free life, being a good father, or fulfilling a career, etc. I am researching the type of sensing, feedback, intervention and identity technologies, needed to help people realize such life goals. I am currently exploring machinima as a way to deliver interactive movies, sensor-less sensing, as a way to non-invasively detect affect and live journal data mining for auto biographical narrative study to support identity change.
+
+\subsection{Improving Editing Interfaces for Audio Stories}
+\emph{Steve Rubin, srubin@cs.berkeley.edu}\\
+\emph{http://ssrubin.com}\\
+Producers of radio shows, podcasts, and audiobooks face
+several challenges when editing raw footage into a final story. One
+challenge is that of adding musical scores to stories. Our UnderScore
+system analyzes music and allows producers to automatically add music
+to emphasize important parts of the their stories. With UnderScore and
+other tools, we aim to allow producers to think of and edit their
+stories in terms of high-level content as opposed to low-level
+waveforms.
 
 \subsection{Actuated Tensegrity Structures for Dynamic Locomotion}
 \emph{Andrew Sabelhaus, apsabelhaus@berkeley.edu}\\
@@ -85,6 +113,11 @@ Combining the popular mechatronics paradigms of soft robotics and bio-inspiratio
 \emph{Kristin Stephens-Martinez, ksteph@cs.berkeley.edu}\\
 \emph{http://www.cs.berkeley.edu/$\sim$ksteph/}\\
 Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
+
+\subsection{ANUJ}
+\emph{Anuj Tewari, anuj@eecs.berkeley.edu}\\
+\emph{http://cs.berkeley.edu/$\sim$anuj}\\
+Lack of proper English instructions is a major problem for a variety of populations around the world. This lack of exposure poses various serious problems, including a barrier to entry into mainstream society. At the Berkeley Institute of Design we explore a variety of topics like mobile phone games for language learning in developing countries, pronunciation feedback for Hispanic children and question-answering technologies for preschoolers. Details on some of these projects can be found here: http://www.cs.berkeley.edu/$\sim$anuj/language\_learning\_games
 
 \subsection{Ingenuity Lab: Making and Engineering through Design Challenges at a Science Center}
 \emph{Jennifer Wang, jennifer\_wang@berkeley.edu}\\
