--- a/bid.tex
+++ b/bid.tex
@@ -38,11 +38,26 @@ Kimiko Ryokai, School of Information\\
 \newpage
 \fontsize{3mm}{3.5mm}\selectfont
 
-\subsection{DERRICK}
+\subsection{Topic-Driven Adaptive Exercises}
+\emph{Den Armendariz, danallan@eecs.berkeley.edu}\\
+Adaptive technologies in various assessments have long been
+able to present a progression of difficulty in questions that is based
+on past performance. This project investigates how student engagement
+is impacted by an adaptive system that also customizes the progression
+of question topics. Not only is the difficulty of the questions
+customized to the user, but also the progression of topics to ensure
+competency in prerequisite topics before advancement.
+
+\subsection{Urban Analytics and Kinectograph}
 \emph{Derrick Cheng, derrick@eecs.berkeley.edu}\\
 \emph{http://linkedin.com/chengderrick}\\
 I work with Professor Canny in behavioral data mining. We are currently working on a project in Urban Analytics, in which we are analyzing community feedback on topics related to urban planning and development. 
 In addition to this work, I am also involved in a project called Kinectograph - an automatic body tracking camera for DIY tutorials.
+
+\subsection{DemoCut: Generating Concise Instrucional Videos for Physical Demonstrations}
+\emph{Peggy Chi, peggychi@cs.berkeley.edu}\\
+\emph{http://www.cs.berkeley.edu/$\sim$peggychi/}\\
+DemoCut is a semi-automatic video editing system that creates amateur instructional videos for physical DIY tasks. It asks users to mark key moments in a recorded demonstration. Using audio and video analysis, our system automatically organizes the video into meaningful segments and applies appropriate video editing effects, including subtitles, fast motion, leap frog, zoom, and skip.
 
 \subsection{Fostering Deep Engagements with Technology}
 \emph{Laura Devendorf, ldevendorf@ischool.berkeley.edu}\\
@@ -53,6 +68,11 @@ Working at the intersection of the art and computer science, I design and study 
 \emph{Jeremy Faludi, faludi@berkeley.edu}\\
 \emph{http://www.faludidesign.com}\\
 Sustainability has historically been seen by designers and engineers as a burden--a further constraint on them.  This new design method instead uses sustainability points of view as tools for innovation.  It uses a combination of whole-systems and life-cycle thinking to break down assumptions and lead engineers to reformulate problems for radical reductions in environmental impacts while also improving functionality, business viability, and user experience.
+
+\subsection{Design Informatics: Leveraging Crowds to Create Better Designs}
+\emph{Mark Fuge, mark.fuge@berkeley.edu}\\
+\emph{http://www.markfuge.com}\\
+What makes a particular design good? How do we make new designs better? My line of research attempts to answer those questions by using data-driven techniques to study large sets of human generated designs – an approach I refer to as Design Informatics. By using probabilistic inference over large databases of designs, we can extract why certain designs are better than others and shed light on the principles or processes that are used to construct new designs. This approach has been used to propose and answer several design questions, such as: What makes certain design more creative than others? How are design methods related to each other? How do collaborative design challenges operate?
 
 \subsection{Human-Centric User Research to Identify Disruptive Opportunties in Convergent Paper and Digital Use}
 \emph{Euiyoung Kim, euiyoungkim@berkeley.edu}\\
@@ -82,7 +102,7 @@ access scholarly literature called PeerLibrary (http://peerlibrary.org/)
 and on a voting scheme which uses a social network between voters to
 find a better overall group decision.
 
-\subsection{PABLO}
+\subsection{Human Potential Technology}
 \emph{Pablo Paredes, paredes@eecs.berkeley.edu}\\
 \emph{http://eecs.berkeley.edu/$\sim$paredes}\\
 My research focuses on Human Potential Realization. HCI has been supporting efforts to help people realize goals that are externally imposed and time bounded through CSCW and Mass Media technology. Recently Persuasive and Behavior Change Technologies have been supporting short term intrinsic goals. However there seems to be a gap in technology development for long-term intrinsic goals, those so-called life goals, such as having a healthy, stress-free life, being a good father, or fulfilling a career, etc. I am researching the type of sensing, feedback, intervention and identity technologies, needed to help people realize such life goals. I am currently exploring machinima as a way to deliver interactive movies, sensor-less sensing, as a way to non-invasively detect affect and live journal data mining for auto biographical narrative study to support identity change.
@@ -114,7 +134,7 @@ Combining the popular mechatronics paradigms of soft robotics and bio-inspiratio
 \emph{http://www.cs.berkeley.edu/$\sim$ksteph/}\\
 Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
 
-\subsection{ANUJ}
+\subsection{Speech-Enabled Games for Language Learning}
 \emph{Anuj Tewari, anuj@eecs.berkeley.edu}\\
 \emph{http://cs.berkeley.edu/$\sim$anuj}\\
 Lack of proper English instructions is a major problem for a variety of populations around the world. This lack of exposure poses various serious problems, including a barrier to entry into mainstream society. At the Berkeley Institute of Design we explore a variety of topics like mobile phone games for language learning in developing countries, pronunciation feedback for Hispanic children and question-answering technologies for preschoolers. Details on some of these projects can be found here: http://www.cs.berkeley.edu/$\sim$anuj/language\_learning\_games
