--- a/bid.tex
+++ b/bid.tex
@@ -134,6 +134,18 @@ Combining the popular mechatronics paradigms of soft robotics and bio-inspiratio
 \emph{http://www.cs.berkeley.edu/$\sim$ksteph/}\\
 Massive Open Online Courses (MOOCs) have tens of thousands of students enrolled in an online course at once. With so many more students than physical classrooms and lots of new kinds of information recorded, how can we use it to make things better? My goal is to find and automate ways to find interesting things in MOOC data. Then I will also find how best to visualize that information for teachers.
 
+\subsection{Ambient Stress Detection}
+\emph{David Sun, davidsun@eecs.berkeley.edu}\\
+\emph{http://www.eecs.berkeley.edu/$\sim$davidsun/}\\
+Stress has a profound impact on the emotional, cognitive and physical
+well-being of people. Routine and unobtrusive monitoring of stress
+would enable a variety of treatments, from break-taking to calming
+exercises. Custom sensing is a poor option, because of the barrier to
+entry even before stress-related problems are evident. In this work,
+we explore ambient stress detection from peopleÎéÎ÷s everyday
+interactions with commodity devices including cellphones and the
+computer mouse.
+
 \subsection{Speech-Enabled Games for Language Learning}
 \emph{Anuj Tewari, anuj@eecs.berkeley.edu}\\
 \emph{http://cs.berkeley.edu/$\sim$anuj}\\
