--- a/bid.tex
+++ b/bid.tex
@@ -74,6 +74,11 @@ Sustainability has historically been seen by designers and engineers as a burden
 \emph{http://www.markfuge.com}\\
 What makes a particular design good? How do we make new designs better? My line of research attempts to answer those questions by using data-driven techniques to study large sets of human generated designs – an approach I refer to as Design Informatics. By using probabilistic inference over large databases of designs, we can extract why certain designs are better than others and shed light on the principles or processes that are used to construct new designs. This approach has been used to propose and answer several design questions, such as: What makes certain design more creative than others? How are design methods related to each other? How do collaborative design challenges operate?
 
+\subsection{Human-Inspired Technology}
+\emph{Shiry Ginosar, shiry@eecs.berkeley.edu}\\
+\emph{http://www.eecs.berkeley.edu/$\sim$shiry}\\
+Humans are highly evolved beings with computational capabilities that modern algorithms can rarely achieve. This is particularly true in the area of complex learning and visual perception. I am interested in modeling human performance in different areas and designing technology inspired by these abilities.
+
 \subsection{Human-Centric User Research to Identify Disruptive Opportunties in Convergent Paper and Digital Use}
 \emph{Euiyoung Kim, euiyoungkim@berkeley.edu}\\
 \emph{http://euiyoungkim.wordpress.com}\\
